# ImGuiProject

./: .gitignore  CMakeLists.txt  main.cpp
classes/: ImGuiManager.cpp  ImGuiManager.h  ImGuiWindowBase.cpp  ImGuiWindowBase.h  TelemetryWindow.cpp  TelemetryWindow.h
classes/Helper/: ImGuiHelpers.cpp  ImGuiHelpers.h  TextureLoader.cpp  TextureLoader.h  Time.h
classes/Math/: Vector.h
classes/TelemetryConverters/: TelemetryConverter.h  TelemetryConverterACC.cpp  TelemetryConverterACC.h  TelemetryConverterDummy.cpp  TelemetryConverterDummy.h  TelemetryReader.cpp  TelemetryReader.h  TelemetryWriter.cpp  TelemetryWriter.h
classes/Windows/: CarInputWindow.cpp  CarInputWindow.h  CarMechanicsWindow.cpp  CarMechanicsWindow.h  LapWindow.cpp  LapWindow.h  MapWindow.cpp  MapWindow.h
